--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,20 @@ code {
     monospace;
 }
 
-h1 {
+h1, h2 {
   text-align: center;
 }
 
 .container {
   margin: auto;
   text-align: center;
+}
+
+#generate {
+  text-align: center;
+}
+
+ul {
+  text-align: center;
+  list-style-position: inside;
 }
